[package]
name = "test_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
certified-vars = "0.1"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
candid = "0.7"
ic-kit = "0.4"
serde = "1.0.116"
serde_cbor = "0.11.2"
serde_bytes = "0.11.5"
assert-panic = "1.0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"